practice/app-sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: app-sidecar
  name: app-sidecar
spec:
  containers:
  - image: nginx
    name: app-sidecar
    volumeMounts:
    - name: logs
      mountPath: /var/log/nginx
  - name: log-shipper
    image: busybox
    command: ['sh', '-c', 'tail -f /logs/access.log']
    volumeMounts:
    - name: logs
      mountPath: /logs
  volumes:
  - name: logs
    emptyDir: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
