practice/cm-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: cm-pod
  name: cm-pod
spec:
  containers:
  - image: nginx
    name: cm-pod
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
