practice/init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-init-container
  name: pod-init-container
spec:
  containers:
  - image: busybox
    name: pod-init-container
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
