practice/multipod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: multipod
  name: multipod
spec:
  containers:
  - name: multipod
    image: alpine:latest
    command: ['sh', '-c', 'cat /opt/init.txt && tail -f /dev/null']
    volumeMounts:
    - name: data
      mountPath: /opt
  volumes:
  - name: data
    emptyDir: {}
  restartPolicy: Never
status: {}
