practice/pod-config-temp.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-con-config
  name: pod-con-config
spec:
  containers:
  - image: nginx
    name: pod-con-config
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
