practice/pod-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-resource-limits
  name: pod-resource-limits
spec:
  resources:
    requests:
      memory: "100Mi"
    limits:
      memory: "128Mi"
      cpu: "500m"
  containers:
  - image: nginx
    name: pod-resource-limits
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
