practice/pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-secret
  name: pod-secret
spec:
  containers:
  - image: nginx
    name: pod-secret
    name: pod-con-secret
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
