practice/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-config
  name: pod-config
spec:
  containers:
  - image: nginx
    name: pod-config
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
