practice/podconfig.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod
  name: pod
spec:
  containers:
  - name: pod
    image: nginx
  restartPolicy: Always
